# 3D-DPM

./: .gitignore  3DDPM.files  CMakeLists.txt  GSHOTPyramid.cpp  GSHOTPyramid.cpp.autosave  GSHOTPyramid.h  GSHOTPyramid.hpp  HOGPyramid.cpp  HOGPyramid.h  Intersector.h  JPEGImage.cpp  LBFGS.cpp  LBFGS.h  Mixture.cpp  Mixture.h  Model.cpp  Model.h  OLDrealTrain.cpp  Object.cpp  Patchwork.cpp  PointCloud.cpp  PointCloud.h  PointCloud.hpp  README.txt  ReadMe.txt  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  conv.txt  createscene.cpp  dpm3d.files  dpm3d.includes  realTrain.cpp  tensor3d.cpp  tensor3d.h  test.cpp  test_mixture.cpp  test_model.cpp  test_pyramid.cpp  (+6 more)
images/: chair_1.ply
include/: GSHOTPyramid.h  Intersector.h  LBFGS.h  Mixture.h  Model.h  Object.h  Rectangle.h  Scene.h  tensor3d.h  typedefs.h  viewer.h
src/: GSHOTPyramid.cpp  LBFGS.cpp  Mixture.cpp  Model.cpp  OLDrealTrain.cpp  Object.cpp  Rectangle.cpp  Scene.cpp  createscene.cpp  main.cpp  realTrain.cpp  test_mixture.cpp  test_model.cpp  test_rectangle.cpp  test_training.cpp
test/: GSHOT.cpp
